Tag a button as a button, because HTML is weird

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@ Scheduled tweet(s):
 <table border=1 id=setups></table>
 <form name=setups method=post action="/update">
 <table>
-<tr><td><label for=category>Category:</label></td><td><input id=category name=category size=30><button id=pick_cat>Pick</button></td></tr>
+<tr><td><label for=category>Category:</label></td><td><input id=category name=category size=30><button id=pick_cat type=button>Pick</button></td></tr>
 <tr><td><label for=title>Stream title:</label></td><td><input id=title name=title size=75></td></tr>
 <tr><td>Tags:</td><td>NOT YET SUPPORTED IN TWITCH API</td></tr>
 </table>
