--- a/static/main.css
+++ b/static/main.css
@@ -103,3 +103,12 @@ details {
 #picker li {
 	cursor: pointer;
 }
+
+#errormessage {
+	border: 3px solid red;
+	background: #fcc;
+	min-height: 3em;
+	max-width: 30em;
+	padding: 0.5em;
+	margin: 1em;
+}
