--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,9 @@ Scheduled tweet(s):
 <form name=setups method=post action="/update">
 <table>
 <tr><td><label for=category>Category:</label></td><td><input id=category name=category size=30><button id=pick_cat type=button>Pick</button></td></tr>
-<tr><td><label for=title>Stream title:</label></td><td><input id=title name=title size=75></td></tr>
-<tr><td>Tags:</td><td>NOT YET SUPPORTED IN TWITCH API</td></tr>
+<tr><td><label for=title>Stream title:</label></td><td><input id=title name=title size=125></td></tr>
+<tr><td>Tags:</td><td><input id=tags name=tags size=125></td></tr>
+<tr><td colspan=2>Separate multiple tags with commas. (A tag picker is on my TODO list.)</td></tr>
 </table>
 <input type=submit value="Update stream info"> <button type=button id=save>Save this setup</button>
 </form>
