Add usage tip (per suggestion from DarkthemeCoder)

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,8 @@ Scheduled tweet(s):
 <option value="1800">At T+30 mins</option>
 </select>
 <input type=submit value="Tweet!"><span id=tweettime>Immediate</span></p>
+<p>Tip: The tweet is included in a saved setup. Retain an entire ready-to-go tweet, or pre-write parts of it (eg a list of hashtags),
+to save yourself the trouble of writing it out every time.</p>
 </form>
 </section>
 
