--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,10 @@ Scheduled tweet(s):
 <input type=submit value="Update stream info"> <button type=button id=save>Save this setup</button>
 </form>
 <div id=picker class=modal>
+<button id=picker_cancel>x</button>
 <h3 id=picker_heading>Pick a category:</h3>
 <input id=picker_search size=30>
 <ul id=picker_results></ul>
-<button id=picker_cancel>Cancel</button>
 </div>
 </section>
 
