Switch to using a modal <dialog> rather than a plain div

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,12 +43,12 @@ Scheduled tweet(s):
 </table>
 <input type=submit value="Update stream info"> <button type=button id=save>Save this setup</button>
 </form>
-<div id=picker class=modal>
+<dialog id=picker>
 <button id=picker_cancel>x</button>
 <h3 id=picker_heading>Pick a category:</h3>
 <input id=picker_search size=30>
 <ul id=picker_results></ul>
-</div>
+</dialog>
 </section>
 
 <section>
