--- a/static/main.css
+++ b/static/main.css
@@ -92,13 +92,13 @@ textarea {
 	width: 1.75em;
 }
 
-.modal {
-	display: none;
+dialog {
 	position: fixed;
 	width: 30em; height: 20em;
 	top: calc(50% - 15em);
 	left: calc(50% - 10em);
-	background: white;
+	bottom: calc(50% - 15em);
+	right: calc(50% - 10em);
 	border: 5px solid black;
 	padding: 1em;
 	overflow: auto;
