--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,7 @@
 <link rel="stylesheet" href="/static/main.css">
 </head>
 <body>
-<ul class="menu">
-<li><a href="/login"><img src="http://ttv-api.s3.amazonaws.com/assets/connect_dark.png" alt="Connect with Twitch"></a></li>
-</ul>
+<p><a href="/login"><img src="http://ttv-api.s3.amazonaws.com/assets/connect_dark.png" alt="Connect with Twitch"></a></p>
 <h1>Mustard Mine</h1>
 <p>
 The Mustard Mine is a Twitch go-live assistant. It can set your game/category, stream title, and (eventually) tags;
