--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@ Scheduled tweet(s):
 
 <section>
 <h2>Twitter</h2>
-<ul class=menu><li>{{ twitter | safe }}</li></ul>
+{{ twitter }}
 <form method=post action="/tweet">
 <p><label>Tweet that you're live: <textarea name=tweet id=tweet rows=3 cols=100></textarea></label><span id=tweetlen>0</span> / 280</p>
 <p><select name=tweetschedule id=tweetschedule>
