Remove "eventually" from the login page - tags are working now

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 <p><a href="/login"><img src="http://ttv-api.s3.amazonaws.com/assets/connect_dark.png" alt="Connect with Twitch"></a></p>
 <h1>Mustard Mine</h1>
 <p>
-The Mustard Mine is a Twitch go-live assistant. It can set your game/category, stream title, and (eventually) tags;
+The Mustard Mine is a Twitch go-live assistant. It can set your game/category, stream title, and tags;
 schedule a tweet to be posted right as you go live; provide a countdown timer for use in OBS or other streaming
 software; and help you manage a checklist of important tasks. Mustard Mine will remember your "stream setups"
 (category, title, tags, and launch tweet), allowing you to easily select between different setups as you
