Add handy text to the Mustard Mine's schedule info

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,9 @@ to save yourself the trouble of writing it out every time.</p>
 <li>On each day-of-week, you may have zero or more times. Each time is interpreted within the specified timezone.</li>
 <li>Times can be entered with AM/PM and will be converted into 24-hour notation.</li>
 <li>"Preview" times and countdowns on this dashboard may use your local time, ignoring the specified timezone. Don't worry, the real countdown will use the right timezone.</li>
-<li>This info is not public, so there's no need to have a "vacation mode" etc. Just don't click the button to tell MM to do stuff.</li>
+<li>This info is not public, so there's no need to have a "vacation mode" etc. Just don't click the button to tell MM to do stuff. For the same
+reason, it's absolutely fine to have temporary or occasional stream times listed here; this isn't a promise to your viewers, just a convenience
+for your countdown timer and tweet.</li>
 <li>Daylight Saving Time is an abomination. It's impossible to handle it perfectly. If you disagree with how MM handles it, speak to your elected
 representatives and try to get DST abolished. (It won't be easy - in fact, it'll be nearly impossible - but trying to get a program to handle DST
 perfectly is even harder.)</li>
