Break out the DOM builder into its own file in advance of spinning it off

--- a/templates/index.html
+++ b/templates/index.html
@@ -154,6 +154,7 @@ Restore backup: <input type=file name=backup>
 <div id=pagination>
 <button id=prev_section>↢</button> Sections <button id=next_section>↣</button>
 </div>
+<script src="/static/chocfactory.js"></script>
 <script src="/static/mustard.js"></script>
 </body>
 </html>
