--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@ Scheduled tweet(s):
 <section class=current>
 <h2>Stream setups</h2>
 <table border=1 id=setups><tr><th>Category</th><th>Title</th><th>Tags</th><th>Tweet</th></tr></table>
-<form name=setups method=post action="/update">
+<form name=setups class=ajax method=post action="/update">
 <input type=hidden name=channelid value={{channelid}}>
 <table>
 <tr><td><label for=category>Category:</label></td><td><input id=category name=category size=30><button id=pick_cat type=button>Pick</button></td></tr>
