Tweak message display in advance of some changes

--- a/static/main.css
+++ b/static/main.css
@@ -113,7 +113,7 @@ dialog {
 	right: 1em; top: 1em;
 }
 
-#errormessage {
+.errormessage {
 	border: 3px solid red;
 	background: #fcc;
 	min-height: 3em;
