--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@ Scheduled tweet(s):
 
 <section>
 <h2>Twitter</h2>
+<!-- TODO: Suppress this when channelid is not your login id. This probably doesn't make sense if you're editing another channel -->
 {{ twitter }}
 <form method=post class=ajax action="/tweet">
 <input type=hidden name=channelid value={{channelid}}>
