Reflect the tweet schedule in the UI.
There's still no way to change it (short of restoring a manually-tweaked
backup file), but it should be functional at least.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@ const channel = {{ channel | tojson }};
 let setups = {{ setups | tojson }};
 const sched_tz = {{ sched_tz | tojson }};
 const schedule = {{ schedule | tojson }};
+const sched_tweet = {{ sched_tweet | tojson }}; //should be just a number
 const initial_tweets = {{ tweets | tojson }};
 </script>
 </head>
