Change picker_cancel into a generic button for any dialog

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@ const initial_tweets = {{ tweets | tojson }};
 <input type=submit value="Update stream info"> <button type=button id=save>Save this setup</button>
 </form>
 <dialog id=picker>
-<button id=picker_cancel>x</button>
+<button type=button class=dialog_cancel>x</button>
 <h3 id=picker_heading>Pick a category:</h3>
 <input id=picker_search size=30>
 <ul id=picker_results></ul>
