--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,19 @@ to save yourself the trouble of writing it out every time.</p>
 </form>
 <dialog id=twitter_cfg>
 <button type=button class=dialog_cancel>x</button>
+<form name=twittercfg class=ajax method=post action="/twitter_cfg">
+<ul><li>Default schedule time:
+<select id=stdschedule name=stdschedule>
+<option value="0">At schedule</option>
+<option value="300">At T+5 mins</option>
+<option value="600">At T+10 mins</option>
+<option value="1800">At T+30 mins</option>
+<option value="custom">Custom</option>
+</select></li>
+<li class=customonly><label>Custom schedule time: <input name=customsched type=number> seconds.</label></li>
+<li class=customonly>Positive for after scheduled time, negative for before.</li>
+</ul>
+</form>
 </dialog>
 </section>
 
