--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,7 @@ to save yourself the trouble of writing it out every time.</p>
 <li class=customonly><label>Custom schedule time: <input name=custsched type=number> seconds.</label></li>
 <li class=customonly>Positive for after scheduled time, negative for before.</li>
 </ul>
+<input type=submit value="Set defaults">
 </form>
 </dialog>
 </section>
