--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,10 @@
 <link rel="stylesheet" href="/static/main.css">
 </head>
 <body>
-<p><a href="/login"><img src="http://ttv-api.s3.amazonaws.com/assets/connect_dark.png" alt="Connect with Twitch"></a></p>
+<p><form action="/login"><button id=login>
+<svg viewBox="0 0 128 134" fill="#6441a4"><path d="M89,77l-9,23v94h32v17h18l17-17h26l35-35V77H89Zm107,76-20,20H144l-17,17V173H100V89h96v64Zm-20-41v35H164V112h12Zm-32,0v35H132V112h12Z" transform="translate(-80 -77)"/></svg>
+<span>Connect with Twitch</span>
+</button></form></p>
 <h1>Mustard Mine</h1>
 <p>
 The Mustard Mine is a Twitch go-live assistant. It can set your game/category, stream title, and tags;
