--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,6 @@ Restore backup: <input type=file name=backup>
 <div id=pagination>
 <button id=prev_section>↢</button> Sections <button id=next_section>↣</button>
 </div>
-<script type=module src="https://rosuav.github.io/shed/chocfactory.js"></script>
-<script defer src="/static/mustard.js"></script>
+<script type=module src="/static/mustard.js"></script>
 </body>
 </html>
