Mock up enough to try to run this

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,9 +68,9 @@ const initial_tweets = {{ tweets | tojson }};
 <p>Tip: The tweet is included in a saved setup. Retain an entire ready-to-go tweet, or pre-write parts of it (eg a list of hashtags),
 to save yourself the trouble of writing it out every time.</p>
 </form>
-<div class="unimplemented" style="display: none">
+<div class="unimplemented">
 <h2>Discord</h2>
-{{ "discord login" }}
+{{ discord }}
 <form method=post class=ajax action="/discord">
 <table id=discord_channels>
 <tr><th>Rosuav #general</th><td><input name="chan_12345" size=80></td></tr>
