Fix up the cursor handling and make it mostly useful. Still not ready to push to prod.

--- a/static/main.css
+++ b/static/main.css
@@ -81,6 +81,7 @@ textarea {
 	cursor: text;
 	padding: 2px;
 	font-family: monospace;
+	white-space: pre-wrap;
 }
 /* Force the spans to be monospaced, since otherwise they set it
 back to Times New Roman for some reason. Or not. I dunno now. */
