Flag the setup form when it's dirty (ie has changes that haven't been pushed to Twitch)

--- a/static/main.css
+++ b/static/main.css
@@ -195,3 +195,7 @@ ul[data-selval="custom"] li.customonly {
 #prevsetup span {
 	margin: 0 0.5em;
 }
+
+form.dirty {
+	background-color: #ffeeee;
+}
