Make actual use of the CSS config options in timers

--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -8,6 +8,7 @@ div {
 	font-weight: 400;
 	font-size: 12em;
 }
+{{ styling }}
 /* Custom CSS can make use of selector "#time.now" to affect the "NOW" display */
 </style>
 </head>
