--- a/static/main.css
+++ b/static/main.css
@@ -144,6 +144,11 @@ dialog {
 	right: 1em; top: 1em;
 }
 
+#maturedesc {
+	margin-left: 1em;
+	padding-right: 0.25em;
+}
+
 #messages div {
 	min-height: 3em;
 	max-width: 30em;
