--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,13 @@ const initial_tweets = {{ tweets | tojson }};
 <form name=setups class=ajax method=post action="/update">
 <input type=hidden name=channelid value={{channelid}}>
 <table>
-<tr><td><label for=category>Category:</label></td><td><input id=category name=category size=30><button id=pick_cat type=button>Pick</button></td></tr>
+<tr>
+	<td><label for=category>Category:</label></td>
+	<td>
+		<input id=category name=category size=30><button id=pick_cat type=button>Pick</button>
+		<label><input id=mature type=checkbox name=mature> Mature</label><span id=maturedesc></span>
+	</td>
+</tr>
 <tr><td><label for=title>Stream title:</label></td><td><input id=title name=title size=125></td></tr>
 <tr><td>Tags:</td><td><input id=tags name=tags size=125> <button id=pick_tag type=button>Pick</button></td></tr>
 <tr><td colspan=2>Separate multiple tags with commas.</td></tr>
