Add a Mature flag to setups

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@ const initial_tweets = {{ tweets | tojson }};
 
 <section class=current>
 <h2>Stream setups</h2>
-<table border=1 id=setups><tr><th>Category</th><th>Title</th><th>Tags</th><th>Tweet</th></tr></table>
+<table border=1 id=setups><tr><th>Category</th><th>Title</th><th>Tags</th><th>Mature</th><th>Tweet</th></tr></table>
 <div id=prevsetup></div>
 <form name=setups class=ajax method=post action="/update">
 <input type=hidden name=channelid value={{channelid}}>
