--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@ const initial_tweets = {{ tweets | tojson }};
 	</td>
 </tr>
 <tr><td><label for=title>Stream title:</label></td><td><input id=title name=title size=125></td></tr>
-<tr><td>Tags:</td><td><input id=tags name=tags size=125> <button id=pick_tag type=button>Pick</button></td></tr>
+<tr><td>Tags:</td><td><input id=tags name=tags size=125></td></tr>
 <tr><td colspan=2>Separate multiple tags with commas.</td></tr>
 </table>
 <input type=submit value="Update stream info"> <button type=button id=save>Save this setup</button>
