--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@ const channel = {{ channel | tojson }};
 let setups = {{ setups | tojson }};
 let sched_tweet = {{ sched_tweet | tojson }}; //should be just a number
 const initial_tweets = {{ tweets | tojson }};
+const all_ccls = {{ all_ccls | tojson }};
 </script>
 </head>
 <body>
@@ -35,11 +36,9 @@ const initial_tweets = {{ tweets | tojson }};
 <table>
 <tr>
 	<td><label for=category>Category:</label></td>
-	<td>
-		<input id=category name=category size=30><button id=pick_cat type=button>Pick</button>
-		<label>CCLs: <input id=ccls name=ccls size=30></label> (hack pending a dialog)
-	</td>
+	<td><input id=category name=category size=30><button id=pick_cat type=button>Pick</button></td>
 </tr>
+<tr><td><label for=ccls>Classification:</label></td><td><input id=ccls name=ccls size=118 readonly> <button id=pick_ccls type=button>Pick</button></td></tr>
 <tr><td><label for=title>Stream title:</label></td><td><input id=title name=title size=125></td></tr>
 <tr><td>Tags:</td><td><input id=tags name=tags size=125></td></tr>
 <tr><td colspan=2>Separate multiple tags with commas.</td></tr>
@@ -51,6 +50,11 @@ const initial_tweets = {{ tweets | tojson }};
 <div>
 <input id=picker_search size=50>
 <ul id=picker_results></ul>
+</div></section></dialog><dialog id=ccl_picker><section>
+<header><h3>Select classifications:</h3><div><button type=button class=dialog_cancel>x</button></div></header>
+<div>
+<ul id=ccl_options></ul>
+<button id=ccl_apply>Apply</button>
 </div></section></dialog>
 </section>
 
